k8s/apps/judge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: judge
  namespace: judge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: judge
  template:
    metadata:
      labels:
        app: judge
    spec:
      nodeSelector:
        role: judge
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "judge"
          effect: "NoSchedule"
      containers:
        - name: judge
          image: ${JUDGE_IMAGE}
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1500m"
              memory: "1Gi"
